# bazel-mcp

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
bazel_mcp/: __init__.py  __main__.py  bazel.py  build_parser.py  cli.py  exceptions.py  models.py  server.py  settings.py  test_parser.py
bazel_mcp/tools/: build.py  explain.py  query.py
tests/: test_bazel.py  test_explain.py  test_query_tools.py  test_test_parser.py
